force-app/main/default/objects/Class__c/fields/Branch__c.field-meta.xml
<CustomField>
    <fullName>Branch__c</fullName>
    <description>Branch or department</description>
    <inlineHelpText>Select the academic branch (e.g., Computer Science).</inlineHelpText>
    <label>Branch</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>