force-app/main/default/objects/Class__c/fields/Section__c.field-meta.xml
<CustomField>
    <fullName>Section__c</fullName>
    <description>Section within the class</description>
    <inlineHelpText>Select the section of the class.</inlineHelpText>
    <label>Section</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CS-1</fullName>
            </value>
            <value>
                <fullName>CS-2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>